--- a/.env
+++ b/.env
@@ -1,11 +1,22 @@
-# Configuration de MySQL
-MYSQL_ROOT_PASSWORD=rootpassword
-DATABASE_NAME=strapi_db
-DATABASE_USERNAME=strapi_user
-DATABASE_PASSWORD=strapi_password
-
 # Configuration de sécurité pour Strapi
+JWT_SECRET=EKeE2XVnFcDUA0axUHxusw==
 APP_KEYS=mHrJFsOdhS5H9UYp5r6yUA==,LG3aXGlaTEFejXWPEt5wbw==,9CD2a+jGQnqRPumgsKfyOg==,Z2OgpeDd5wxbnSjl9kmr3A==
 API_TOKEN_SALT=LNFJ2jTzYFFumCWdpQaQcA==
 ADMIN_JWT_SECRET=9Vus9cs+MOUtiUrogVUPGw==
 TRANSFER_TOKEN_SALT=AsW0VO2y58EwBT/Dn5QXfw==
+
+# URL de l'API Strapi
+NEXT_PUBLIC_API_URL=http://localhost:1337
+
+# Jeton d'authentification API (si nécessaire pour accéder à Strapi)
+NEXT_PUBLIC_API_TOKEN=ton_jeton_api_ici
+
+# Configuration de la base de données MySQL pour Strapi
+DATABASE_HOST=mysql
+DATABASE_PORT=3306
+DATABASE_NAME=strapi
+DATABASE_USERNAME=strapi_user
+DATABASE_PASSWORD=strapi_pass
+
+# Mot de passe root MySQL
+MYSQL_ROOT_PASSWORD=root
