--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,45 +1,41 @@
 services:
-
-  strapi:
-    container_name: strapi
-    image: kevinad/dreamsite-admin:main
+  web:
+    image: kevinad/dreamsite-web-front  # Image de ton Next.js
     restart: always
-    env_file: .env
-    environment:
-      DATABASE_CLIENT: mysql
-      DATABASE_HOST: db
-      DATABASE_PORT: 3306
-      DATABASE_NAME: ${DATABASE_NAME}
-      DATABASE_USERNAME: ${DATABASE_USERNAME}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      DATABASE_SSL: 'false'
-      # Configuration de sécurité Strapi
-      APP_KEYS: ${APP_KEYS}
-      API_TOKEN_SALT: ${API_TOKEN_SALT}
-      ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
-      TRANSFER_TOKEN_SALT: ${TRANSFER_TOKEN_SALT}
-    volumes:
-      - ./back:/app  # Montez le répertoire du projet pour le développement en direct
-      - /app/node_modules  # Montez node_modules pour éviter les conflits
     ports:
-      - '1337:1337'
+      - "3000:3000"  # Expose Next.js
+    environment:
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}  # URL de Strapi
     depends_on:
-      - db
+      - admin  # Démarre après Strapi
 
-  db:
-    image: mysql:5.7
-    container_name: mysql
+  admin:
+    image: kevinad/dreamsite-admin  # Image de ton Strapi
     restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-      MYSQL_DATABASE: ${DATABASE_NAME}
-      MYSQL_USER: ${DATABASE_USERNAME}
-      MYSQL_PASSWORD: ${DATABASE_PASSWORD}
-    volumes:
-      - db_data:/var/lib/mysql  # Stockage persistant pour MySQL
     ports:
-      - '3306:3306'
+      - "1337:1337"  # Expose Strapi
+    environment:
+      - DATABASE_CLIENT=mysql
+      - DATABASE_HOST=${DATABASE_HOST}
+      - DATABASE_PORT=${DATABASE_PORT}
+      - DATABASE_NAME=${DATABASE_NAME}
+      - DATABASE_USERNAME=${DATABASE_USERNAME}
+      - DATABASE_PASSWORD=${DATABASE_PASSWORD}
+    depends_on:
+      - mysql  # Démarre après MySQL
+
+  mysql:
+    image: mysql:8.0  # Image officielle de MySQL
+    restart: always
+    ports:
+      - "3306:3306"  # Expose MySQL
+    environment:
+      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE=${DATABASE_NAME}
+      - MYSQL_USER=${DATABASE_USERNAME}
+      - MYSQL_PASSWORD=${DATABASE_PASSWORD}
+    volumes:
+      - mysql_data:/var/lib/mysql  # Persistance des données
 
 volumes:
-  db_data:
-  matomo:
+  mysql_data:
