--- a/.env
+++ b/.env
@@ -5,10 +5,8 @@ API_TOKEN_SALT=LNFJ2jTzYFFumCWdpQaQcA==
 ADMIN_JWT_SECRET=9Vus9cs+MOUtiUrogVUPGw==
 TRANSFER_TOKEN_SALT=AsW0VO2y58EwBT/Dn5QXfw==
 
-# URL de l'API Strapi
+# Config vers l'API Strapi
 NEXT_PUBLIC_API_URL=http://localhost:1337
-
-# Jeton d'authentification API (si nécessaire pour accéder à Strapi)
 NEXT_PUBLIC_API_TOKEN=ton_jeton_api_ici
 
 # Configuration de la base de données MySQL pour Strapi
