--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# Configuration du projet
+PROJECT_NAME=Project_Name
+
 # Configuration de sécurité pour Strapi
 JWT_SECRET=EKeE2XVnFcDUA0axUHxusw==
 APP_KEYS=mHrJFsOdhS5H9UYp5r6yUA==,LG3aXGlaTEFejXWPEt5wbw==,9CD2a+jGQnqRPumgsKfyOg==,Z2OgpeDd5wxbnSjl9kmr3A==
@@ -10,7 +13,7 @@ NEXT_PUBLIC_API_URL=http://localhost:1337
 NEXT_PUBLIC_API_TOKEN=ton_jeton_api_ici
 
 # Configuration de la base de données MySQL pour Strapi
-DATABASE_HOST=mysql
+DATABASE_HOST=cms_db
 DATABASE_PORT=3306
 DATABASE_NAME=strapi
 DATABASE_USERNAME=strapi_user
