--- a/Dockerfile.cms
+++ b/Dockerfile.cms
@@ -1,5 +1,5 @@
 # Étape de build à partir de l'image de dev
-FROM project-name-cms as builder
+FROM NOM-DU-PROJET-cms as builder
 
 # S'assurer d'être dans le bon dossier
 WORKDIR /opt/app
