--- a/Dockerfile.front
+++ b/Dockerfile.front
@@ -1,5 +1,5 @@
 # Étape 1 : Build de l'application (Nom de l'image du projet)
-FROM NOM-DU-PROJET-front AS builder
+FROM project-name-front AS builder
 
 WORKDIR /app
 
