--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,7 @@ services:
   # FRONT DU PROJET
   # -----------------------------------------------------------------
   front:
-    build:
-      context: ./infra/front
+    image: kevinad/dreamsite-web-front:v3.0.0
     container_name: ${PROJECT_NAME}-front # Nom de l'image
     restart: always
     ports:
@@ -20,8 +19,7 @@ services:
   # CONSOLE CMS
   # -----------------------------------------------------------------
   cms:
-    build:
-      context: ./infra/cms
+    image: kevinad/dreamsite-cms:v3.0.2
     container_name: ${PROJECT_NAME}-cms # Nom de l'image
     restart: always
     ports:
@@ -42,8 +40,7 @@ services:
       - cms_db  # Démarre après MySQL
 
   cms_db:
-    build:
-      context: ./infra/cms_db
+    image: mysql:8.0
     container_name: ${PROJECT_NAME}-db # Nom de l'image
     restart: always
     ports:
@@ -59,8 +56,7 @@ services:
   # MAILDEV
   # -----------------------------------------------------------------
   maildev:
-    build:
-      context: ./infra/maildev
+    image: maildev/maildev
     restart: always
     ports:
       - "1080:1080"
