--- a/Dockerfile.front
+++ b/Dockerfile.front
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Installer les dépendances
-RUN npm install
+RUN npm ci
 
 # Copier le reste du projet
 COPY . .
@@ -21,11 +21,10 @@ FROM node:slim
 WORKDIR /app
 
 # Copier seulement le nécessaire
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
-COPY --from=builder /app/next.config.ts ./next.config.ts
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/.next ./.next
+COPY --from=builder /app/public ./public
 
 # Exposer le port
 EXPOSE 3000
