Update copy Next.JS Files

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,4 +3,4 @@ services:
   # -----------------------------------------------------------------
   front:
     volumes:
-      - ./front:/app/src/components
+      - ./front:/app/src
