--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 # Configuration du projet
 PROJECT_NAME=project-name
+CONTAINER_NAME=strapi-client
+
+# REGISTRY
+GHCR_NAMESPACE=ghcr.io/yourorg
+DOCKERHUB_NAMESPACE=yourdockerhubuser
 
 # Configuration de sécurité pour Strapi
 JWT_SECRET=EKeE2XVnFcDUA0axUHxusw==
