--- a/.env
+++ b/.env
@@ -18,6 +18,7 @@ NEXT_PUBLIC_API_URL=http://localhost:1337
 NEXT_PUBLIC_API_TOKEN=ton_jeton_api_ici
 
 # Configuration de la base de données MySQL pour Strapi
+DATABASE_CLIENT=mysql
 DATABASE_HOST=cms_db
 DATABASE_PORT=3306
 DATABASE_NAME=strapi
