--- a/docker-compose.front-dev.yml
+++ b/docker-compose.front-dev.yml
@@ -1,9 +1,4 @@
-version: "3.8"
-
 services:
   front:
     volumes:
-      - ./front-local/src:/app/src
-      - ./front-local/pages:/app/pages
-      - ./front-local/public:/app/public
-      # Ajoute d'autres dossiers si besoin (components, styles, etc.)
+      - ./front-src:/app/src
