Dockerfiles Prod Config

--- a/docker/front/Dockerfile
+++ b/docker/front/Dockerfile
@@ -1,38 +1,29 @@
-# ---------- STAGE 1 : BUILD ----------
+# ---------- STAGE 1 : DEV (image existante avec app déjà buildée) ----------
 ARG BASE_IMAGE
-FROM ${BASE_IMAGE} AS build
-
-WORKDIR /app
-
-# Installer les dépendances
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
-
-# Copier le code et builder l'app
-COPY . .
-RUN yarn build
+FROM ${BASE_IMAGE} as dev
 
 # ---------- STAGE 2 : PROD ----------
 FROM node:slim
 
-# Dumb-init pour une meilleure gestion des signaux (SIGTERM, etc.)
+# Pour gérer les signaux correctement (SIGTERM, etc.)
 RUN apt-get update && \
     apt-get install -y dumb-init && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Créer le répertoire de travail
 WORKDIR /app
 
-# Copier ce qui est nécessaire pour la prod uniquement
-COPY --from=build /app/package.json ./package.json
-COPY --from=build /app/node_modules ./node_modules
-COPY --from=build /app/.next ./.next
-COPY --from=build /app/public ./public
+# Copie minimale pour faire tourner l'app Next.js en prod
+COPY --from=dev /app/package.json ./package.json
+COPY --from=dev /app/node_modules ./node_modules
+COPY --from=dev /app/.next ./.next
+COPY --from=dev /app/public ./public
+COPY --from=dev /app/next.config.ts ./next.config.ts
 
-# Exposer le port Next.js
+# Si tu as d'autres fichiers nécessaires (envs, middlewares, etc.)
+# COPY --from=dev /app/.env.production ./
+
 EXPOSE 3000
 
-# Remplacer le CMD pour que dumb-init gère le processus
 ENTRYPOINT ["dumb-init", "--"]
 CMD ["yarn", "start"]
