--- a/docker/cms/Dockerfile
+++ b/docker/cms/Dockerfile
@@ -1,32 +1,33 @@
-# --- Étape 1 : basée sur ton image de dev Strapi (commitée) ---
+# Étape 1 : image dev avec Strapi buildé
+# ------------------------------------------------------------
 ARG BASE_IMAGE
 FROM ${BASE_IMAGE} as dev
 
-# --- Étape 2 : image prod propre et allégée ---
+# Étape 2 : image de prod
+# ------------------------------------------------------------
 FROM node:22-alpine
 
-# Dépendances système nécessaires à Strapi
 RUN apk add --no-cache vips-dev
 
-# Environnement
 ENV NODE_ENV=production
-WORKDIR /opt/
+ENV PATH=/opt/app/node_modules/.bin:$PATH
 
-# Copy des dépendances Node
-COPY --from=dev /opt/node_modules ./node_modules
-
-# Copy du projet Strapi
+# Dossier de travail
 WORKDIR /opt/app
-COPY --from=dev /opt/app ./
 
-# Optionnel : yarn.lock pour audit
-COPY --from=dev /opt/app/yarn.lock ./yarn.lock
+# Copie du code Strapi
+COPY --from=dev /opt/app /opt/app
 
-ENV PATH=/opt/node_modules/.bin:$PATH
+# Copie des dépendances dans le bon dossier
+COPY --from=dev /opt/node_modules /opt/app/node_modules
+
+# Build Strapi (admin UI)
+RUN yarn build
 
 # Permissions
 RUN chown -R node:node /opt/app
 USER node
 
 EXPOSE 1337
+
 CMD ["yarn", "start"]
