Docker Compose Test Prod

--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@
 PROJECT_NAME=project-name
 
 # REGISTRY
-GHCR_NAMESPACE=ghcr.io/yourorg
-DOCKERHUB_USER=yourdockerhubuser
+GHCR_NAMESPACE=ghcr.io/creativeeyestudio
+DOCKERHUB_USER=kevinad
 
 # Configuration de sécurité pour Strapi
 JWT_SECRET=EKeE2XVnFcDUA0axUHxusw==
