--- a/.env
+++ b/.env
@@ -5,12 +5,7 @@ PROJECT_NAME=project-name
 GHCR_NAMESPACE=ghcr.io/creativeeyestudio
 DOCKERHUB_USER=kevinad
 
-# Configuration de sécurité pour Strapi
-JWT_SECRET=EKeE2XVnFcDUA0axUHxusw==
-APP_KEYS=mHrJFsOdhS5H9UYp5r6yUA==,LG3aXGlaTEFejXWPEt5wbw==,9CD2a+jGQnqRPumgsKfyOg==,Z2OgpeDd5wxbnSjl9kmr3A==
-API_TOKEN_SALT=LNFJ2jTzYFFumCWdpQaQcA==
-ADMIN_JWT_SECRET=9Vus9cs+MOUtiUrogVUPGw==
-TRANSFER_TOKEN_SALT=AsW0VO2y58EwBT/Dn5QXfw==
+# Configuration Payload CMS
 
 # Config vers l'API Strapi
 NEXT_PUBLIC_API_URL=http://167.235.64.198:1337
