--- a/front/.env
+++ b/front/.env
@@ -1,7 +1,7 @@
 # Website
-NEXT_PUBLIC_SITE_NAME=Creative Eye Studio
+NEXT_PUBLIC_SITE_NAME='Creative Eye Studio'
 
 # API CMS
-NEXT_PUBLIC_API_URL=
-NEXT_PUBLIC_API_USER=
-API_PASSWORD=
+NEXT_PUBLIC_API_URL=http://167.235.64.198:3000
+NEXT_PUBLIC_API_USER=admin@admin.com
+API_PASSWORD=admin
