--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,12 +8,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./front/src:/app/src
-      - ./front/public:/app/public
-      - ./front/package.json:/app/package.json
-      - ./front/package-lock.json:/app/package-lock.json
-      - ./front/next.config.js:/app/next.config.js
-      - ./front/tsconfig.json:/app/tsconfig.json
+      - ./front:/app/
       - /app/node_modules
     env_file:
       - .env
