--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,5 +1,10 @@
 FROM node:20-alpine
 
+RUN apk add --no-cache \
+    vips-dev \
+    build-base \
+    python3
+
 WORKDIR /app
 
 COPY package.json package-lock.json ./
