--- a/.env
+++ b/.env
@@ -13,3 +13,8 @@ NEXT_PUBLIC_API_USER=admin@admin.com
 API_PASSWORD=admin
 PAYLOAD_SECRET=YOUR_SECRET_HERE
 DATABASE_URI=mongodb://mongo:27017/payload
+
+#  PAYLOAD
+PAYLOAD_API_URL=http://localhost:3001/api
+PAYLOAD_ADMIN_EMAIL=admin@example.com
+PAYLOAD_ADMIN_PASSWORD=admin
