--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ NEXT_PUBLIC_API_USER=admin@admin.com
 API_PASSWORD=admin
 PAYLOAD_SECRET=YOUR_SECRET_HERE
 DATABASE_URI=mongodb://mongo:27017/payload
+
+eee
