--- a/.env.local
+++ b/.env.local
@@ -2,6 +2,9 @@
 NEXT_PUBLIC_SITE_NAME='Creative Eye Studio'
 
 # API CMS
-NEXT_PUBLIC_API_URL=
-NEXT_PUBLIC_API_USER=
-API_PASSWORD=
+NEXT_PUBLIC_API_URL=http://167.235.64.198:3100
+NEXT_PUBLIC_API_USER=admin@admin.com
+API_PASSWORD=admin
+
+# Menus ID
+MAIN_MENU=68532bd7af6afbb00107d433
