--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dompurify": "^3.2.3",
     "embla-carousel-react": "^8.6.0",
+    "lucide-react": "^0.517.0",
     "negotiator": "^1.0.0",
     "next": "^15.3.2",
     "next-i18next": "^15.4.2",
@@ -45,6 +48,7 @@
     "react-dom": "^19.0.0",
     "sonner": "^2.0.5",
     "swiper": "^11.2.8",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "ts-morph": "^26.0.0",
     "ukiyojs": "^4.2.0"
