--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          cd front && npm install
+          cd front && npm install && npx playwright install --with-deps
           cd ../back && npm install
 
       - name: Build front (Next.js)
@@ -42,6 +42,7 @@ jobs:
 
       - name: Run Playwright tests
         run: |
+          npx playwright install-deps
           npx playwright install
           npm run test:e2e
         env:
