--- a/front/package.json
+++ b/front/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "format": "prettier --check .",
-    "format:fix": "prettier --write ."
+    "format:fix": "prettier --write .",
+    "test:e2e": "playwright test"
   },
   "files": [
     "public",
