--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -9,6 +9,9 @@ jobs:
   test-back:
     name: Test back (Payload CMS)
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
 
     services:
       mongo:
